--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,10 +28,16 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    
     - name: Archive production artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Loldle-Build
         path: |
           build
+          
+    - name: Deploy
+      uses: actions/deploy-pages@v2
+      with:
+        artifact_name: Loldle-Build
     
