--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,12 +29,12 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: Loldle-Build
-        path: |
-          build
+    - name: Upload screenshots as a github-pages artifact
+      uses: actions/upload-artifact@v2
+      with: 
+        name: github-pages
+        path: build
+        
   deploy:     
     needs: build
 
@@ -50,6 +50,6 @@ jobs:
     steps:
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v2
+      uses: actions/deploy-pages@v3
       with:
         artifact_name: Loldle-Build
